--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link href='//fonts.googleapis.com/css?family=Montserrat:thin,extra-light,light,100,200,300,400,500,600,700,800' 
      rel='stylesheet' type='text/css'>
-    <title>React App</title>
+    <title>WorldLearn</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
